code updates and refactors/fixes